@@ -174,9 +174,11 @@
     <tests.path>${projects.path}/test</tests.path>
 
     <!-- tde/tcmd project paths -->
-    <tde.classpath>${tools.path}/tde/lib/tde.jar</tde.classpath>
+    <tde.classpath>./../../tools/tde/lib/tde.jar</tde.classpath>
     <tde.projects.path>${root.path}/tde</tde.projects.path>
     <tde.projects.dependencies.path>${tde.projects.path}/core/1.3/ext</tde.projects.dependencies.path>
+
+    <tde.projects.file.url>file:./../../tde</tde.projects.file.url>
 
     <copyright.exclude.files>${projects.path}/etc/copyright-exclude.txt</copyright.exclude.files>
 
@@ -405,6 +407,7 @@
         <module>coherence-java-client</module>
         <module>coherence-helidon-client</module>
         <module>coherence-concurrent</module>
+        <module>plugins</module>
       </modules>
     </profile>
 
@@ -852,6 +855,7 @@
                   <exclude>**/LongStreamTest.java</exclude>
                   <!-- Repository tests -->
                   <exclude>**/DefaultRepositoryTest.java</exclude>
+                  <exclude>**/DefaultAsyncRepositoryTest.java</exclude>
                 </excludes>
               </configuration>
             </plugin>
@@ -891,6 +895,8 @@
 
                 <!-- exclude packages using lambdas -->
                 <exclude>com/tangosol/util/function/Remote/*.*</exclude>
+                <exclude>**/com/tangosol/util/stream/*.*</exclude>
+                <exclude>**/com/oracle/coherence/repository/*.*</exclude>
                 <exclude>**/com/oracle/coherence/concurrent/locks/*.*</exclude>
 
                 <!-- exclude deprecated features -->
@@ -952,6 +958,82 @@
         <surefire.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8</surefire.argLine>
         <failsafe.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -XX:+UnlockCommercialFeatures -Dfile.encoding=UTF-8</failsafe.argLine>
       </properties>
+    </profile>
+
+    <profile>
+      <id>test-jdk16</id>
+      <properties>
+        <surefire.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8 --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-exports java.management/sun.management=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</surefire.argLine>
+        <failsafe.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8 --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-exports java.management/sun.management=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</failsafe.argLine>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>${maven.surefire.plugin.version}</version>
+              <configuration>
+                <systemPropertyVariables>
+                  <bedrock.profile.illegalaccess>deny</bedrock.profile.illegalaccess>
+                  <!-- below allows the profile to not be in package com.oracle.bedrock.  need to wait for bedrock update for this to work. -->
+                  <!--bedrock.profile.illegalaccess.classname>com.oracle.coherence.test.IllegalAccessProfile</bedrock.profile.illegalaccess.classname-->
+                </systemPropertyVariables>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <version>${maven.failsafe.plugin.version}</version>
+              <configuration>
+                <systemPropertyVariables>
+                  <bedrock.profile.illegalaccess>deny</bedrock.profile.illegalaccess>
+                  <!-- below allows the profile to not be in package com.oracle.bedrock.  need to wait for bedrock update for this to work. -->
+                  <!--bedrock.profile.illegalaccess.classname>com.oracle.coherence.test.IllegalAccessProfile</bedrock.profile.illegalaccess.classname-->
+                </systemPropertyVariables>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+
+    <profile>
+      <id>test-jdk17</id>
+      <properties>
+        <surefire.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8 --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-exports java.management/sun.management=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</surefire.argLine>
+        <failsafe.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8 --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-exports java.management/sun.management=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</failsafe.argLine>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>${maven.surefire.plugin.version}</version>
+              <configuration>
+                <systemPropertyVariables>
+                  <bedrock.profile.illegalaccess>deny</bedrock.profile.illegalaccess>
+                  <!-- below allows the profile to not be in package com.oracle.bedrock.  need to wait for bedrock update for this to work. -->
+                  <!--bedrock.profile.illegalaccess.classname>com.oracle.coherence.test.IllegalAccessProfile</bedrock.profile.illegalaccess.classname-->
+                </systemPropertyVariables>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <version>${maven.failsafe.plugin.version}</version>
+              <configuration>
+                <systemPropertyVariables>
+                  <bedrock.profile.illegalaccess>deny</bedrock.profile.illegalaccess>
+                  <!-- below allows the profile to not be in package com.oracle.bedrock.  need to wait for bedrock update for this to work. -->
+                  <!--bedrock.profile.illegalaccess.classname>com.oracle.coherence.test.IllegalAccessProfile</bedrock.profile.illegalaccess.classname-->
+                </systemPropertyVariables>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
     </profile>
 
     <profile>
